2003-03-09  Eddy De Greef <eddy_de_greef at tiscali dot be>

	* backend/mustek_pp_cis.c backend/mustek_pp_cis.h: Fixed two
          calibration bugs: one occasionally caused overexposed images at 
          all resolutions; the other one occasionally caused color inbalances
          when scanning narrow areas at high resolutions.

2003-03-09  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* sanei/sanei_scsi.c: Wait for the completion of all SCSI commands in
	  sanei_scsi_flush_all_extended (Linux). Without this fix, especially
	  long running commands and command queuing would cause memory
	  corruption if the buffer was invalid after the flush command.
	* doc/descriptions/abaton.desc: Removed link to everex (timeout).

2003-03-07  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/mustek.c doc/descriptions/mustek.desc
	  doc/mustek/mustek.CHANGES: Minor debug message updates. Fixed a
	  little bug in sane_control_option (gamma control). Removed the
	  signal blocking again. That only hides the segfault in sanei_scsi.
	  Check if there are documents in ADF for Paragon 2. Otherwise return
	  error. Fix some minor issues in reading the config file.

2003-03-07  Peter Fales <peter@fales-lorenz.net>

	* doc/descriptions/dc210.desc, doc/descriptions/dc240.desc:
	  Fix broken URLs to the Kodak web pages

2003-03-06  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/gt68xx.c backend/gt68xx_gt6801.c backend/gt68xx_gt6816.c
	  backend/gt68xx_low.c doc/sane-gt68xx.man doc/descriptions/gt68xx.desc
	  doc/gt68xx/gt68xx.CHANGES: Small requests are done with a response
	  buffer of 8 bytes (instead of 64) now. Looks like GT-6816 based
	  scanners return 8 bytes if the firmware is loaded and 64 bytes if
	  it's not loaded. Changed GT-6816 firmware check to ignore errors
	  from above change. GT-6816 scanners work with the BSDs now (at least
	  once). Updated manpage concerning the BSDs.

2003-03-05  Henning Meier-Geinitz <henning@meier-geinitz.de>
